# Goodbye-DPI

./: Cargo.toml  README.md  config.yaml  full_blacklist  tor_blacklist  youtube_blacklist
src/: client.rs  config.rs  dns.rs  main.rs
