[package]
name = "goodbye_dpi"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
rand = "0.8"
tokio = { version = "1.42", features = ["full"] }
tokio-socks = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
url = "2.5"
